feat- makes changes in buttons and stylings

--- a/groceries.html
+++ b/groceries.html
@@ -9,6 +9,7 @@
         <!-- font awesome link -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <link rel="stylesheet" href="css/groceries.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -54,27 +55,7 @@
     </section>
 
     <!-- banner section -->
-    <section class="banner-container">
-
-        <div class="banner">
-            <img src="/images/img-1.jpg" alt="">
-            <div class="content">
-                <h3>special offer</h3>
-                <p>upto 45% off</p>
-                <a href="#" class="btn">check out</a>
-            </div>
-        </div>
-    
-        <div class="banner">
-            <img src="/images/img-2.jpg" alt="">
-            <div class="content">
-                <h3>limited offer</h3>
-                <p>upto 50% off</p>
-                <a href="#" class="btn">check out</a>
-            </div>
-        </div>
-    
-    </section>
+  >
 
     <!-- category section -->
     <section class="category" id="category">
@@ -82,27 +63,23 @@
         <div class="box-container">
             <div class="box">
                 <h3>vegetables</h3>
-                <p>5% discount</p>
                 <img src="/images/vegetables.jpg" alt="">
-                <a href="" class="btn">shop now</a>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="box">
                 <h3>Drinks</h3>
-                <p>10 % discount</p>
                 <img src="/images/drinks.jpg" alt="">
-                <a href="" class="btn">shop now</a>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="box">
                 <h3>meat</h3>
-                <p>15% discount</p>
                 <img src="/images/meat.jpg" alt="">
-                <a href="" class="btn">shop now</a>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="box">
                 <h3>fruits</h3>
-                <p>5% discount</p>
                 <img src="/images/fruits.jpg" alt="">
-                <a href="" class="btn">shop now</a>
+                <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
         </div>
     </section>
@@ -114,7 +91,6 @@
     <div class="box-container">
 
         <div class="box">
-            <span class="discount">-33%</span>
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -135,11 +111,11 @@
                 <input type="number" min="1" max="1000" value="1">
                 <span> /kg </span>
             </div>
-            <a href="#" class="btn">add to cart</a>
+            <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
 
         <div class="box">
-            <span class="discount">-45%</span>
+
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -160,11 +136,10 @@
                 <input type="number" min="1" max="1000" value="1">
                 <span> /kg </span>
             </div>
-            <a href="#" class="btn">add to cart</a>
+            <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
 
         <div class="box">
-            <span class="discount">-52%</span>
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -185,11 +160,10 @@
                 <input type="number" min="1" max="1000" value="1">
                 <span> /kg </span>
             </div>
-            <a href="#" class="btn">add to cart</a>
+            <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
 
         <div class="box">
-            <span class="discount">-13%</span>
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -210,11 +184,10 @@
                 <input type="number" min="1" max="1000" value="1">
                 <span> /kg </span>
             </div>
-            <a href="#" class="btn">add to cart</a>
+            <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
 
         <div class="box">
-            <span class="discount">-20%</span>
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -235,11 +208,10 @@
                 <input type="number" min="1" max="1000" value="1">
                 <span> /kg </span>
             </div>
-            <a href="#" class="btn">add to cart</a>
+            <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
 
         <div class="box">
-            <span class="discount">-29%</span>
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -260,11 +232,10 @@
                 <input type="number" min="1" max="1000" value="1">
                 <span> /kg </span>
             </div>
-            <a href="#" class="btn">add to cart</a>
+            <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
 
         <div class="box">
-            <span class="discount">-55%</span>
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -285,11 +256,10 @@
                 <input type="number" min="1" max="1000" value="1">
                 <span> /kg </span>
             </div>
-            <a href="#" class="btn">add to cart</a>
+            <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
 
         <div class="box">
-            <span class="discount">-30%</span>
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -310,11 +280,10 @@
                 <input type="number" min="1" max="1000" value="1">
                 <span> /kg </span>
             </div>
-            <a href="#" class="btn">add to cart</a>
+            <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
 
         <div class="box">
-            <span class="discount">-40%</span>
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-share"></a>
@@ -335,7 +304,7 @@
                 <input type="number" min="1" max="1000" value="1">
                 <span> /kg </span>
             </div>
-            <a href="#" class="btn">add to cart</a>
+            <input type="submit" name="submit" id="submit" value="Add to cart">
         </div>
 
     </div>
@@ -343,49 +312,53 @@
 </section>
 
     <!-- contact-us -->
-    <section id="contact">
-        <h1 class="heading">contact us</h1>
-        <div class="container">
 
-            <div class="row contact">
-                <div class="col-lg-6 icons">
-                    <ul>
-                        <li><i class="fa-solid fa-phone"></i> Call To Order: O712345678</li>
-                        <li><i class="fa-brands fa-whatsapp"></i> Whatsapp Number: 0712345678</li>
-                        <li><i class="fa-brands fa-slack"></i> Slack: Sky Mall</li>
-                        <li><i class="fa-solid fa-envelope"></i> Email: skymall@gmail.com</li>
-                        <li><i class="fa-solid fa-location-pin"></i> Visit our Offices at Sky Mall Towers</li>
-                    </ul>
-                </div>
-                <div class="col-lg-6">
-                    <div id="mc_embed_signup">
-
-
-
-                        <form action="https://gmail.us14.list-manage.com/subscribe/post?u=8d8a5b81293206b47b521e3e8&amp;id=8c7c003574" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate d-flex flex-column align-self-center contact-us-overlay"
-                            target="_blank" novalidate>
-                            <div id="mc_embed_signup_scroll">
-
-                                <div class="d-flex mb-3">
-                                    <input class="form-control" type="text" name="name" id="mce-FNAME" placeholder="Name..." />
-
-                                    <input class="form-control" type="email" name="email" id="mce-EMAIL" placeholder="Email..." required />
-                                </div>
-                                <textarea class="form-control" name="textarea" id="mce-LNAME" cols="30" rows="5" placeholder="Your message here..."></textarea>
-                                <button type="submit" class="btn btn-secondary mt-2 show-msg" id="mc-embedded-subscribe">SUBMIT</button>
-                                <p style="padding: 5px;" class="ms"></p>
-                                <div id="mce-responses" class="clear foot">
-                                    <div class="response" id="mce-error-response" style="display:none"></div>
-                                    <div class="response" id="mce-success-response" style="display:none"></div>
-                                </div>
-                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8d8a5b81293206b47b521e3e8_8c7c003574" tabindex="-1" value=""></div>
-                            </div>
-                        </form>
+            <footer class="footer">
+                <div class="row">
+                    <div class="footer-col lg-3">
+                        <h4>skymall shopping</h4>
+                        <ul>
+                            <li><a href="#">about us</a></li>
+                            <li><a href="#">our services</a></li>
+                            <li><a href="#">privacy policy</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col lg-3">
+                        <h4>get help</h4>
+                        <ul>
+                            <li><a href="#">FAQ</a></li>
+                            <li><a href="#">returns</a></li>
+                            <li><a href="#">order status</a></li>
+                            <li><a href="#">payment options</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col lg-3">
+                        <h4>online shop</h4>
+                        <ul>
+                            <li><a href="#">watch</a></li>
+                            <li><a href="#">bag</a></li>
+                            <li><a href="#">shoes</a></li>
+                            <li><a href="#">dress</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col lg-3">
+                        <h4>follow us</h4>
+                        <div class="social-links">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-    <script src="groceries.js"></script>
+
+
+                <hr>
+                <div class="text-center">
+                    <p>Designed and developed by Aggrey, Beth, Kipkoech & Linet</p>
+                </div>
+
+            </footer>
+
 </body>
 </html>
