--- a/fashion.html
+++ b/fashion.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container-fluid">
 
         <header>
 
@@ -29,9 +29,9 @@
 
                     <ul>
                         <li> <a href="index.html">Home</a> </li>
-                        <li><a href="index.html">About us</a> </li>
-                        <li><a href="index.html">Store</a> </li>
-                        <li> <a href="index.html">Contact us</a> </li>
+                        <li><a href="furniture.html">Furniture</a> </li>
+                        <li><a href="groceries.html">Groceries</a> </li>
+                        <li> <a href="Electronics.html">Electronics</a> </li>
 
                     </ul>
 
@@ -130,6 +130,52 @@
             </div>
 
         </div>
+        <footer class="footer">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>skymall shopping</h4>
+                    <ul>
+                        <li><a href="#">about us</a></li>
+                        <li><a href="#">our services</a></li>
+                        <li><a href="#">privacy policy</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>get help</h4>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">returns</a></li>
+                        <li><a href="#">order status</a></li>
+                        <li><a href="#">payment options</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>online shop</h4>
+                    <ul>
+                        <li><a href="#">watch</a></li>
+                        <li><a href="#">bag</a></li>
+                        <li><a href="#">shoes</a></li>
+                        <li><a href="#">dress</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>follow us</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+
+
+            <hr>
+            <div class="text-center">
+                <p>Designed and developed by Aggrey, Beth, Kipkoech & Linet</p>
+            </div>
+
+        </footer>
     </div>
 
 
