feat: html- adds class names to the buttons

--- a/Electronics.html
+++ b/Electronics.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/Electronic.css">
-    <title>Document</title>
+    <title>Electronics</title>
 </head>
 
 <body>
@@ -49,20 +49,20 @@
 
                 <div class="col-md-3">
                     <img src="assets/images/imr6.jpg">
-                    <input type="submit" name="submit" id="submit" value="Add to cart">
+                    <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
                 </div>
 
                 <div class="col-md-3">
                     <img src="/assets/images/sora-khan-3U2NAo-VHSE-unsplash.jpg">
-                    <input type="submit" name="submit" id="submit" value="Add to cart">
+                    <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
                 </div>
                 <div class="col-md-3">
                     <img src="/assets/images/mulyadi-DkPiCUW3Jdo-unsplash.jpg">
-                    <input type="submit" name="submit" id="submit" value="Add to cart">
+                    <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
                 </div>
                 <div class="col-md-3">
                     <img src="/assets/images/ps5.jpg">
-                    <input type="submit" name="submit" id="submit" value="Add to cart">
+                    <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
                 </div>
 
             </div>
@@ -70,20 +70,20 @@
             <div class="row">
                 <div class="col-md-3">
                     <img src="/assets/images/adrian-regeci-1Ad6gTbYAsM-unsplash.jpg">
-                    <input type="submit" name="submit" id="submit" value="Add to cart">
+                    <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
                 </div>
 
                 <div class="col-md-3">
                     <img src="/assets/images/dmitry-spravko-tl56qAl9STg-unsplash.jpg">
-                    <input type="submit" name="submit" id="submit" value="Add to cart">
+                    <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
                 </div>
                 <div class="col-md-3">
                     <img src="/assets/images/iphone2.jpg">
-                    <input type="submit" name="submit" id="submit" value="Add to cart">
+                    <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
                 </div>
                 <div class="col-md-3">
                     <img src="/assets/images/onur-binay-G8tRf8m7Bss-unsplash.jpg">
-                    <input type="submit" name="submit" id="submit" value="Add to cart">
+                    <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
                 </div>
 
             </div>
@@ -91,20 +91,20 @@
             <div class="row">
                 <div class="col-md-3">
                     <img src="/assets/images/markus-spiske-ryOV0-qerUU-unsplash.jpg">
-                    <input type="submit" name="submit" id="submit" value="Add to cart">
+                    <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
                 </div>
 
                 <div class="col-md-3">
                     <img src="/assets/images/zhasulan-rymbekov-hyrXBZKJ1rY-unsplash.jpg">
-                    <input type="submit" name="submit" id="submit" value="Add to cart">
+                    <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
                 </div>
                 <div class="col-md-3">
                     <img src="/assets/images/iphone2.jpg">
-                    <input type="submit" name="submit" id="submit" value="Add to cart">
+                    <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
                 </div>
                 <div class="col-md-3">
                     <img src="/assets/images/onur-binay-G8tRf8m7Bss-unsplash.jpg">
-                    <input type="submit" name="submit" id="submit" value="Add to cart">
+                    <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
                 </div>
 
             </div>
