--- a/groceries.html
+++ b/groceries.html
@@ -51,7 +51,6 @@
         <div class="content">
             <span>fresh and organic</span>
             <h3>your daily need products</h3>
-            <a href="#" class="btn">get started</a>
         </div>
 
     </section>
@@ -66,29 +65,25 @@
             <div class="box">
                 <h3>vegetables</h3>
                 <img src="/images/vegetables.jpg" alt="">
-                <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="box">
                 <h3>Drinks</h3>
                 <img src="/images/drinks.jpg" alt="">
-                <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="box">
                 <h3>meat</h3>
                 <img src="/images/meat.jpg" alt="">
-                <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
             <div class="box">
                 <h3>fruits</h3>
                 <img src="/images/fruits.jpg" alt="">
-                <input type="submit" name="submit" id="submit" value="Add to cart">
             </div>
         </div>
     </section>
 
     <!-- products -->
     <section class="product" id="product">
-        <h1 class="heading">latest <span>Groceries</span></h1>
+        <h1 class="heading">Fresh <span>Groceries</span></h1>
 
         <div class="box-container">
 
@@ -113,7 +108,7 @@
                     <input type="number" min="1" max="1000" value="1">
                     <span> /kg </span>
                 </div>
-                <input type="submit" name="submit" id="submit" value="Add to cart">
+                <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
             </div>
 
             <div class="box">
@@ -138,7 +133,7 @@
                     <input type="number" min="1" max="1000" value="1">
                     <span> /kg </span>
                 </div>
-                <input type="submit" name="submit" id="submit" value="Add to cart">
+                <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
             </div>
 
             <div class="box">
@@ -162,7 +157,7 @@
                     <input type="number" min="1" max="1000" value="1">
                     <span> /kg </span>
                 </div>
-                <input type="submit" name="submit" id="submit" value="Add to cart">
+                <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
             </div>
 
             <div class="box">
@@ -186,7 +181,7 @@
                     <input type="number" min="1" max="1000" value="1">
                     <span> /kg </span>
                 </div>
-                <input type="submit" name="submit" id="submit" value="Add to cart">
+                <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
             </div>
 
             <div class="box">
@@ -210,7 +205,7 @@
                     <input type="number" min="1" max="1000" value="1">
                     <span> /kg </span>
                 </div>
-                <input type="submit" name="submit" id="submit" value="Add to cart">
+                <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
             </div>
 
             <div class="box">
@@ -234,7 +229,7 @@
                     <input type="number" min="1" max="1000" value="1">
                     <span> /kg </span>
                 </div>
-                <input type="submit" name="submit" id="submit" value="Add to cart">
+                <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
             </div>
 
             <div class="box">
@@ -258,7 +253,7 @@
                     <input type="number" min="1" max="1000" value="1">
                     <span> /kg </span>
                 </div>
-                <input type="submit" name="submit" id="submit" value="Add to cart">
+                <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
             </div>
 
             <div class="box">
@@ -282,7 +277,7 @@
                     <input type="number" min="1" max="1000" value="1">
                     <span> /kg </span>
                 </div>
-                <input type="submit" name="submit" id="submit" value="Add to cart">
+                <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
             </div>
 
             <div class="box">
@@ -306,7 +301,7 @@
                     <input type="number" min="1" max="1000" value="1">
                     <span> /kg </span>
                 </div>
-                <input type="submit" name="submit" id="submit" value="Add to cart">
+                <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
             </div>
 
         </div>
