--- a/furniture.html
+++ b/furniture.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/furniture.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <title>Sky Mall Furniture's</title>
@@ -13,17 +14,34 @@
 
 <body>
     <div class="container-fluid">
-        <header class="header">
-            <div class="header-1">
-                <a href="#" class="logo"><i class="fas fa-shopping-basket"></i>Skymall</a>
+        <header>
+
+            <div class="header">
                 <nav class="navbar">
-                    <a href="index.html">Home</a>
-                    <a href="fashion.html">Fashion</a>
-                    <a href="groceries.html">Groceries</a>
-                    <a href="Electronics.html">Electronics</a>
+                    <a href="#" class="logo"><i class="fas fa-shopping-bag"></i> SkyMall</a>
+
+                    <ul>
+                        <li> <a href="index.html">Home</a> </li>
+                        <li><a href="furniture.html">Furniture</a> </li>
+                        <li><a href="groceries.html">Groceries</a> </li>
+                        <li> <a href="Electronics.html">Electronics</a> </li>
+                        <li> <a href="cart.html">cart</a> </li>
+
+
+                    </ul>
+
+                    <form action="">
+                        <input type="search" placeholder="search here ..." id="search">
+                        <label for="search" class="fas fa-search"></label>
+
+                    </form>
+
                 </nav>
+
             </div>
         </header>
+
+
 
         <!--    Start of the furniture section-->
         <!--     ======= Header =======-->
@@ -41,19 +59,28 @@
 
         <!--    </header>&lt;!&ndash; End Header &ndash;&gt;-->
         <!--Start Office Furniture-->
+        <div class="cart" id="cart">
+            <div class="title">cart</div>
+            <hr />
+            <div id="title"></div>
+        </div>
         <section id="office">
+
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3" id="item1">
                     <img src="assets/furniture/office1.jpg" alt="dress picture" height="200px" width="300px">
                     <h6>Office Furniture: $50 </h6>
                     <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
+                    <button onclick="addToCart (item1)"> Add to cart</button>
 
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3" id="item2">
                     <img src="assets/furniture/office2.jpg" alt="dress picture" height="200px" width="300px">
                     <h6>Office Furniture: $50 </h6>
                     <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
+                    <button onclick="addToCart (item2)"> Add to cart</button>
+
                 </div>
                 <div class="col-md-3">
                     <img src="assets/furniture/office3.jpg" alt="dress picture" height="200px" width="300px">
@@ -331,6 +358,7 @@
                 </div>
             </div>
         </section>
+
         <!--End of the Bedroom Room Furniture-->
 
         <footer class="footer">
