makes change to all parts ot the page

--- a/fashion.html
+++ b/fashion.html
@@ -32,14 +32,9 @@
                         <li><a href="furniture.html">Furniture</a> </li>
                         <li><a href="groceries.html">Groceries</a> </li>
                         <li> <a href="Electronics.html">Electronics</a> </li>
+                        <li> <a href="cart.html" class="fas fa-shopping-cart"></a></li>
 
                     </ul>
-
-                    <form action="">
-                        <input type="search" placeholder="search here ..." id="search">
-                        <label for="search" class="fas fa-search"></label>
-
-                    </form>
 
                 </nav>
 
@@ -51,8 +46,8 @@
             <div class="row">
                 <div class="col-md-3">
                     <img src="assets/ourstore/dress.jpg" alt="dress picture" height="300px" width="300px">
-                    <h6>Dress : $50 </h6>
-                    <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
+                    <h6 class="item">Dress : $50 </h6>
+                    <input type="submit" class="submit" name="submit" id="Dress" value="Add to cart">
                 
 
                 </div>
