--- a/furniture.html
+++ b/furniture.html
@@ -21,36 +21,20 @@
                     <a href="fashion.html">Fashion</a>
                     <a href="groceries.html">Groceries</a>
                     <a href="Electronics.html">Electronics</a>
+                    <a href="cart.html" class="fas fa-shopping-cart"></a>
                 </nav>
             </div>
         </header>
 
-        <!--    Start of the furniture section-->
-        <!--     ======= Header =======-->
-        <!--    <header id="header" class="d-flex flex-column justify-content-center">-->
-
-        <!--        <nav id="navbar" class="navbar nav-menu">-->
-        <!--            <ul>-->
-        <!--                <li><a href="#office" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Office</span></a></li>-->
-        <!--                <li><a href="#living" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Living Room</span></a></li>-->
-        <!--                <li><a href="#dining" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Dining</span></a></li>-->
-        <!--                <li><a href="#storage" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Storage</span></a></li>-->
-        <!--                <li><a href="#others" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Others</span></a></li>-->
-        <!--            </ul>-->
-        <!--        </nav>&lt;!&ndash; .nav-menu &ndash;&gt;-->
-
-        <!--    </header>&lt;!&ndash; End Header &ndash;&gt;-->
-        <!--Start Office Furniture-->
         <section id="office">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3" id="item">
                     <img src="assets/furniture/office1.jpg" alt="dress picture" height="200px" width="300px">
                     <h6>Office Furniture: $50 </h6>
                     <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
-
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3" id="item2">
                     <img src="assets/furniture/office2.jpg" alt="dress picture" height="200px" width="300px">
                     <h6>Office Furniture: $50 </h6>
                     <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
@@ -324,13 +308,19 @@
                     <h6>Dining Room Furniture : $50 </h6>
                     <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" id="item3">
                     <img src="assets/furniture/bed12.jpg" alt="dress picture" height="200px" width="300px">
                     <h6>Dining Room Furniture : $50 </h6>
                     <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
+
                 </div>
             </div>
         </section>
+        <div class="cart" id="cart">
+            <div class="title">cart</div>
+            <hr />
+            <div id="title"></div>
+        </div>
         <!--End of the Bedroom Room Furniture-->
 
         <footer class="footer">
