--- a/groceries.html
+++ b/groceries.html
@@ -17,10 +17,6 @@
     <header>
         <div class="header-1">
             <a href="#" class="logo"><i class="fas fa-shopping-basket"></i>Skymall</a>
-            <form action="" class="search-box-container">
-                <input type="search" id="search-box" placeholder="search here....">
-                <label for="search-box" class="fas fa-search"></label>
-            </form>
         </div>
 
         <div class="header-2">
@@ -30,14 +26,9 @@
                 <a href="fashion.html">Fashion</a>
                 <a href="furniture.html">furnitures</a>
                 <a href="Electronics.html">Electronics</a>
-
+                <a href="cart.html" class="fas fa-shopping-cart"></a>
             </nav>
 
-            <div class="icons">
-                <a href="#" class="fas fa-shopping-cart"></a>
-                <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="fas fa-shopping-cart"></a>
-            </div>
         </div>
     </header>
 
