--- a/Electronics.html
+++ b/Electronics.html
@@ -26,16 +26,9 @@
                         <li><a href="furniture.html">Furniture</a> </li>
                         <li> <a href="groceries.html">Groceries</a> </li>
                         <li><a href="fashion.html">Fashion</a> </li>
+                        <li> <a href="cart.html" class="fas fa-shopping-cart"></a></li>
 
                     </ul>
-
-                    <!--                <form action="">-->
-                    <!--                    <input type="search" placeholder="search here ..." id="search">-->
-                    <!--                    <label for="search" class="fas fa-search"></label>-->
-
-                    <!--                </form>-->
-
-
                 </nav>
 
             </div>
