--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -35,15 +36,8 @@
                         <li><a href="#about">About</a> </li>
                         <li> <a href="#store">Store</a> </li>
                         <li><a href="#contact">Contact Us</a> </li>
-
+                        <li> <a href="cart.html" class="fas fa-shopping-cart"></a></li>
                     </ul>
-
-                    <form action="">
-                        <input type="search" placeholder="search here ..." id="search">
-                        <label for="search" class="fas fa-search"></label>
-
-                    </form>
-
 
                 </nav>
 
