add cart functionality

--- a/cart.html
+++ b/cart.html
@@ -18,47 +18,88 @@
     <title>SKYMALL SHOPPING</title>
 </head>
 
-<body>
-    <div class="fashion">
+<body style="background-color: #f3dcdc;">
+    <header>
 
-        <div class="row">
-            <div class="col-md-3" id="item1">
-                <img src="assets/ourstore/dress.jpg" alt="dress picture" height="300px" width="300px">
-                <h6>Dress : $50 </h6>
-                <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
-                <button onclick="addToCart (item1)"> Add to cart</button>
+        <div class="header">
+            <nav class="navbar">
+                <a href="#" class="logo"><i class="fas fa-shopping-bag"></i> SkyMall</a>
 
-            </div>
+                <ul>
+                    <li> <a href="index.html">Home</a> </li>
+                    <li><a href="furniture.html">Furniture</a> </li>
+                    <li><a href="fashion.html">Fashion</a> </li>
+                    <li><a href="groceries.html">Groceries</a> </li>
+                    <li> <a href="Electronics.html">Electronics</a> </li>
+                    <li> <a href="cart.html">cart</a> </li>
 
-            <div class="col-md-3" id="item2">
-                <img src="assets/ourstore/shoes.jpg" alt="dress picture" height="300px" width="300px">
-                <h6>Fila shoes : $65 </h6>
-                <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
-                <button onclick=" addToCart(item2)"> Add to cart</button>
 
-            </div>
-            <div class="col-md-3" id="item3">
-                <img src="assets/ourstore/boots.jpg" alt="dress picture" height="300px" width="300px">
-                <h6>Boots : $72</h6>
-                <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
-                <button onclick=" addToCart(item3)"> Add to cart</button>
+                </ul>
 
-            </div>
-            <div class="col-md-3" id="item4">
-                <img src="assets/ourstore/jewellery1.jpg" alt="dress picture" height="300px" width="300px">
-                <h6>Silver jewellery : $100 </h6>
-                <input type="submit" class="submit" name="submit" id="submit" value="Add to cart">
-                <button onclick="addToCart(item4)"> Add to cart</button>
+                <form action="">
+                    <input type="search" placeholder="search here ..." id="search">
+                    <label for="search" class="fas fa-search"></label>
 
-            </div>
+                </form>
+
+            </nav>
 
         </div>
-    </div>
-    <div class="cart" id="cart">
+    </header>
+
+    <div class="cart" id="cart" align="left">
         <div class="title">cart</div>
         <hr />
         <div id="title"></div>
     </div>
+
+    <footer class="footer" style="margin-top: 50%;">
+        <div class="row">
+            <div class="footer-col">
+                <h4>skymall shopping</h4>
+                <ul>
+                    <li><a href="#">about us</a></li>
+                    <li><a href="#">our services</a></li>
+                    <li><a href="#">privacy policy</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>get help</h4>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">returns</a></li>
+                    <li><a href="#">order status</a></li>
+                    <li><a href="#">payment options</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>online shop</h4>
+                <ul>
+                    <li><a href="#">watch</a></li>
+                    <li><a href="#">bag</a></li>
+                    <li><a href="#">shoes</a></li>
+                    <li><a href="#">dress</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>follow us</h4>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+        </div>
+
+
+        <hr>
+        <div class="text-center">
+            <p>Designed and developed by Aggrey, Beth, Kipkoech & Linet</p>
+        </div>
+
+    </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
