--- a/furniture.html
+++ b/furniture.html
@@ -22,9 +22,11 @@
 
                     <ul>
                         <li> <a href="index.html">Home</a> </li>
-                        <li><a href="furniture.html">Furniture</a> </li>
+                        <li><a href="fashion.html">Fashion</a> </li>
+
                         <li><a href="groceries.html">Groceries</a> </li>
                         <li> <a href="Electronics.html">Electronics</a> </li>
+
                         <li> <a href="cart.html">cart</a> </li>
 
 
