--- a/fashion.html
+++ b/fashion.html
@@ -201,7 +201,7 @@
             </div>
 
 
-            <hr>
+            <hr>git
             <div class="text-center">
                 <p>Designed and developed by Aggrey, Beth, Kipkoech & Linet</p>
             </div>
