--- a/furniture.html
+++ b/furniture.html
@@ -18,11 +18,16 @@
 
             <div class="header">
                 <nav class="navbar">
-                    <a href="index.html">Home</a>
-                    <a href="fashion.html">Fashion</a>
-                    <a href="groceries.html">Groceries</a>
-                    <a href="Electronics.html">Electronics</a>
-                    <a href="cart.html" class="fas fa-shopping-cart"></a>
+
+
+                    <ul>
+                        <li> <a href="index.html">All Products</a> </li>
+                        <li><a href="Electronics.html">Electronics</a> </li>
+                        <li> <a href="fashion.html">Fashion</a> </li>
+                        <li> <a href="groceries.html">Groceries</a> </li>
+                        <li><a href="cart.html" class="fas fa-shopping-cart"></a></li>
+
+                    </ul>
                 </nav>
 
             </div>
@@ -33,7 +38,18 @@
                 <div class="title">cart</div>
                 <hr />
                 <div id="title"></div>
-                
+
+
+                <div class="delivery" style="margin-top: 10px;">
+                    <form action="" id="form">
+                        <div class="form-group">
+                            <input type="text" id="name" class="form-control mb-3" placeholder="Name">
+                            <input type="number" id="phone" class="form-control mb-3" placeholder="Pnone Number">
+                            <input type="text" id="location" class="form-control mb-3" placeholder="Location for delivery">
+                            <button class="btn btn-orange" id="final-order">Checkout</button>
+                        </div>
+                    </form>
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-3" id="item1">
